<?xml version="1.0"?>
<package format="2">
  <name>zeus_arm</name>
  <version>0.0.0</version>
  <description>The zeus_arm package</description>

  <maintainer email="loic.boileau@usherbrooke.ca">Loic Boileau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-numpy</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>velocity_controllers</depend>
  <depend>message_runtime</depend>
  <depend>twist_mux</depend>
  <depend>usb_cam</depend>
  <depend>cv_camera</depend>

  <export>
  </export>
</package>